--- a/todo-app/src/App.css
+++ b/todo-app/src/App.css
@@ -1,12 +1,12 @@
-body html {
+body {
   padding: 0;
   margin: 0;
-  font-family: Tahoma;
+  /* font-family: Tahoma; */
+  font-family: cursive;
   background-color: black;
-  background-size: cover;
+  /* background-size: cover; */
   height: 100%;
-
-  overflow: auto;
+  /* overflow: auto; */
 }
 
 
@@ -14,7 +14,8 @@ body html {
   position: absolute;
   width: 35%;
   /* The unit of heigh must be 34 rem to align with the .todo-container */
-  height: 34rem;
+  /* height: 34rem; */
+  height: 550px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -32,7 +33,8 @@ h2 {
 .form-container {
   position: relative;
   text-align: center;
-  margin-bottom: 1rem;
+  /* margin-bottom: 1rem; */
+  margin-bottom: 12px;
   width: 100%;
   height: auto;
 }
@@ -42,12 +44,15 @@ h2 {
   width: 90%;
   text-align: left;
   background-color: aliceblue;
+  font-family: cursive;
 
 }
 
 .todo-container {
   position: relative;
-  margin-top: 1rem;
+  /* margin-top: 1rem; */
+  margin-top: 12px;
+
   border-style: solid;
   border-color: gray;
   overflow: scroll;
@@ -55,7 +60,8 @@ h2 {
   height: auto;
   /* The unit of the max-height MUST be 27rem to keep the todo item within its container 
   and to align with .main-container above */
-  max-height: 27rem; 
+  /* max-height: 27rem;  */
+  max-height: 430px;
   overflow: hidden;
   overflow-y: auto; /* This is the one needed for the scrollbar to work within this container */
 }
@@ -68,6 +74,7 @@ h2 {
   border-style: solid;
   border-width: 3px;
   border-color: white;
+  align-items: center;
 }
 
 
@@ -79,11 +86,12 @@ ul {
   padding-left: 0;
   font-size: 0;
   background-color: paleturquoise;
+  /* height: 22px; */
 }
 
 .todo-item {
   text-decoration: none;
-  color: balck;
+  color: black;
   opacity: 1;
 }
 
@@ -92,32 +100,48 @@ ul {
   text-decoration: line-through;
   color: gray;
   opacity: 0.5;
+  /* cursor: pointer; */
 }
 
 /* The container */
 /* Checkbox texts move when margin is adjusted in here */
 .checkbox-container {
   position: relative;
-  text-align: center;
-  align-items: center;
+  /* text-align: center; */
+  /* align-items: center; */
+  /* align-content: center; */
   cursor: pointer;
-  font-size: 22px;
+  /* font-size: 22px; */
+  font-size: 14px;
+
   overflow: hidden;
   overflow: scroll;
   width: 100%;
   height: auto;
+  /* margin-left: 5px; */
+  border-color: red;
   
 }
 
+/* .checkBox {
+  color: red;
+  border-style: solid;
+  border-color: red;
+} */
+
 .delete-container {
   position: relative;
+  /* margin-top: 3px; */
   float: left;
   align-items: center;
   text-align: center;
   z-index: 2;
+  cursor: pointer;
+  /* border-color: red;
+  border-style: solid; */
 }
 
 .delete-icon {
-  max-width: 100%;
+  max-width: 70%;
   height: auto;
 }
