--- a/todo-app/src/App.css
+++ b/todo-app/src/App.css
@@ -1,20 +1,16 @@
 body {
   padding: 0;
   margin: 0;
-  /* font-family: Tahoma; */
   font-family: cursive;
   background-color: black;
-  /* background-size: cover; */
   height: 100%;
-  /* overflow: auto; */
 }
 
 
 .main-container {
   position: absolute;
   width: 35%;
-  /* The unit of heigh must be 34 rem to align with the .todo-container */
-  /* height: 34rem; */
+  /* The height here should align with the height in '.todo-container' */
   height: 555px;
   top: 50%;
   left: 50%;
@@ -43,7 +39,6 @@ h2 {
 .form-container {
   position: relative;
   text-align: center;
-  /* margin-bottom: 1rem; */
   margin-bottom: 2px;
   width: 100%;
   height: auto;
@@ -61,17 +56,13 @@ h2 {
 
 .todo-container {
   position: relative;
-  /* margin-top: 1rem; */
   margin-top: 12px;
-
   border-style: solid;
   border-color: gray;
   overflow: scroll;
   width: 99%;
   height: auto;
-  /* The unit of the max-height MUST be 27rem to keep the todo item within its container 
-  and to align with .main-container above */
-  /* max-height: 27rem;  */
+  /* The height align with the height in '.main-container' above */
   max-height: 410px;
   overflow: hidden;
   overflow-y: auto; /* This is the one needed for the scrollbar to work within this container */
@@ -97,7 +88,6 @@ ul {
   padding-left: 0;
   font-size: 0;
   background-color: paleturquoise;
-  /* height: 22px; */
 }
 
 .todo-item {
@@ -111,45 +101,27 @@ ul {
   text-decoration: line-through;
   color: gray;
   opacity: 0.5;
-  /* cursor: pointer; */
 }
 
-/* The container */
 /* Checkbox texts move when margin is adjusted in here */
 .checkbox-container {
   position: relative;
-  /* text-align: center; */
-  /* align-items: center; */
-  /* align-content: center; */
   cursor: pointer;
-  /* font-size: 22px; */
   font-size: 14px;
-
   overflow: hidden;
   overflow: scroll;
   width: 100%;
-  height: auto;
-  /* margin-left: 5px; */
-  /* border-color: red; */
-  
+  height: auto;  
 }
 
-/* .checkBox {
-  color: red;
-  border-style: solid;
-  border-color: red;
-} */
 
 .delete-container {
   position: relative;
-  /* margin-top: 3px; */
   float: left;
   align-items: center;
   text-align: center;
   z-index: 2;
   cursor: pointer;
-  /* border-color: red;
-  border-style: solid; */
 }
 
 .delete-icon {
