--- a/todo-app/src/App.css
+++ b/todo-app/src/App.css
@@ -28,7 +28,7 @@ h2 {
 
 .error {
   font-size: 12px;
-  color: rgb(236, 28, 236);
+  color: red;
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
   width: 100%;
@@ -126,5 +126,4 @@ ul {
 
 .delete-icon {
   max-width: 70%;
-  height: auto;
 }
