--- a/todo-app/src/App.css
+++ b/todo-app/src/App.css
@@ -2,7 +2,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: cursive;
-  background-color: black;
+  background-color: #333;
   height: 100%;
 }
 
@@ -94,6 +94,7 @@ ul {
   text-decoration: none;
   color: black;
   opacity: 1;
+  cursor: move; /* change the cursor style to cross-like cursor */
 }
 
 
