--- a/todo-app/src/App.css
+++ b/todo-app/src/App.css
@@ -95,7 +95,8 @@ ul {
   top: 0 !important;
   left: 0 !important; */
   /* margin-top: .5rem; */
-  height: 1.5rem;
+  /* height: 1.5rem; */
+  height: auto;
   text-decoration: none;
   color: black;
   opacity: 1;
