--- a/todo-app/src/App.css
+++ b/todo-app/src/App.css
@@ -8,9 +8,7 @@ body {
 
 
 .main-container {
-  position: absolute;
-  width: 35%;
-  /* The height here should align with the height in '.todo-container' */
+  /* position: absolute;
   height: 555px;
   top: 50%;
   left: 50%;
@@ -18,7 +16,17 @@ body {
   border-style: solid;
   border-width: 2px;
   border-color: darkgray;
+  background-image: linear-gradient(to right top, #587eb7, #00a3da, #00c5ca, #00de87, #a8eb12); */
+
+  position: absolute;
+  border-width: 2px;
+  border-color: darkgray;
   background-image: linear-gradient(to right top, #587eb7, #00a3da, #00c5ca, #00de87, #a8eb12);
+  width: 50%;
+  height: 80%;
+  top: 10%;
+  left: 25%;
+  /* overflow: auto;  */
 }
 
 h2 {
@@ -61,7 +69,7 @@ h2 {
   width: 99%;
   height: auto;
   /* The height align with the height in '.main-container' above */
-  max-height: 430px;
+  max-height: 460px;
   overflow: hidden;
   overflow-y: auto; /* This is the one needed for the scrollbar to work within this container */
   /* margin-top: 1rem; */
