--- a/todo-app/src/App.css
+++ b/todo-app/src/App.css
@@ -9,27 +9,15 @@ body {
 
 
 .main-container {
-  /* position: absolute;
-  height: 555px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border-style: solid;
-  border-width: 2px;
-  border-color: darkgray;
-  background-image: linear-gradient(to right top, #587eb7, #00a3da, #00c5ca, #00de87, #a8eb12); */
-
   position: absolute;
   border-width: 2px;
   border-color: darkgray;
   background-image: linear-gradient(to right top, #587eb7, #00a3da, #00c5ca, #00de87, #a8eb12);
-  /* width: 50%; */
   width: 50vw;
-  /* height: 80%; */
   height: 80vh;
   top: 10%;
   left: 25%;
-  /* overflow: auto;  */
+
 }
 
 h2 {
@@ -66,31 +54,19 @@ h2 {
 
 .todo-container {
   position: relative;
-  /* position: absolute; */
   margin-top: 12px;
-  /* margin-left: 25px; */
-  /* margin-right: 15px; */
-  /* border-style: solid; */
-  /* border-color: gray; */
   overflow: scroll;
-  /* width: 97%; */
-  /* width: 46vw; */
   width: 100%;
-  /* align-items: center; */
-  /* height: auto; */
-  /* height: 100%; */
- 
   /* The height align with the height in '.main-container' above */
-  /* max-height: 460px; */
   max-height: 60vh;
-  /* max-height: 60%; */
   overflow: hidden;
   overflow-y: auto; /* This is the one needed for the scrollbar to work within this container */
-  /* margin-top: 1rem; */
+
 }
 
 .todo-item-container {
   position: relative;
+
   overflow: scroll;
   width: auto;
   height: auto;
@@ -110,6 +86,12 @@ ul {
   padding-left: 0;
   font-size: 0;
   background-color: paleturquoise;
+
+  box-sizing: border-box;
+  border-radius: .5px;
+
+  
+  
   /* height: 2rem; */
 }
 
@@ -127,6 +109,8 @@ ul {
   cursor: move; 
   justify-content: center;
   /* align-items: center; */
+
+ 
 }
 
 
@@ -155,6 +139,8 @@ ul {
   overflow: scroll;
   width: 100%;
   height: auto;  
+
+ 
 }
 
 
@@ -187,6 +173,8 @@ ul {
 
   .checkbox-container {
     font-size: 2vw;
+
+
   }
 
 }
