--- a/todo-app/src/App.css
+++ b/todo-app/src/App.css
@@ -4,7 +4,6 @@ body {
   font-family: cursive;
   background-color: #333;
   height: 100%;
-  /* font-size: 2em; */
 }
 
 
@@ -17,7 +16,6 @@ body {
   height: 80vh;
   top: 10%;
   left: 25%;
-
 }
 
 h2 {
@@ -33,7 +31,6 @@ h2 {
   font-family: Arial, Helvetica, sans-serif;
   width: 100%;
   text-align: center;
-
 }
 
 .form-container {
@@ -57,16 +54,13 @@ h2 {
   margin-top: 12px;
   overflow: scroll;
   width: 100%;
-  /* The height align with the height in '.main-container' above */
-  max-height: 60vh;
+  max-height: 60vh;  /* The height align with the height in '.main-container' above */
   overflow: hidden;
   overflow-y: auto; /* This is the one needed for the scrollbar to work within this container */
-
 }
 
 .todo-item-container {
   position: relative;
-
   overflow: scroll;
   width: auto;
   height: auto;
@@ -74,7 +68,6 @@ h2 {
   border-width: 4px;
   border-color: white;
   align-items: center;
-  /* margin-left: 5%; */
 }
 
 
@@ -86,75 +79,43 @@ ul {
   padding-left: 0;
   font-size: 0;
   background-color: paleturquoise;
-
-  box-sizing: border-box;
-  border-radius: .5px;
-
-  
-  
-  /* height: 2rem; */
 }
 
 .todo-item {
-  /* position: static;
-  top: 0 !important;
-  left: 0 !important; */
-  /* margin-top: .5rem; */
-  /* height: 1.5rem; */
   height: auto;
   text-decoration: none;
   color: black;
   opacity: 1;
-  /* change the cursor style to cross-like cursor */
   cursor: move; 
   justify-content: center;
-  /* align-items: center; */
-
- 
 }
 
 
 .completed {
-  /* text-decoration: line-through; */
-  color: gray;
+  color: rgb(109, 106, 106);
   opacity: 0.5;
-  background-color: rgb(206, 222, 246);
+  background-color: rgb(152, 184, 231);
 }
-
-
-/* .draggable {
-  position: static;
-  top: 0 !important;
-  left: 0 !important;
-} */
 
 
 /* Checkbox texts move when margin is adjusted in here */
 .checkbox-container {
   position: relative;
   cursor: pointer;
-  /* font-size: 14px; */
   font-size: 1vw;
   overflow: hidden;
   overflow: scroll;
   width: 100%;
   height: auto;  
-
- 
+  margin-left: 5px;
 }
 
 
 .delete-container {
   position: relative;
-  /* margin-top: .3rem; */
   float: left;
   align-items: center;
   text-align: center;
-  z-index: 2;
-  cursor: pointer;
-  /* border-style: solid; */
-  /* width: 1rem; */
-  /* height: auto; */
 }
 
 .delete-icon {
@@ -163,6 +124,8 @@ ul {
   margin-top: .1rem;
   max-width: 60%;
   height: auto;
+  z-index: 2;
+  cursor: pointer;
 }
 
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
@@ -173,8 +136,6 @@ ul {
 
   .checkbox-container {
     font-size: 2vw;
-
-
+    margin-left: 5px;
   }
-
 }
