--- a/todo-app/src/App.css
+++ b/todo-app/src/App.css
@@ -6,6 +6,10 @@ body {
   height: 100%;
 }
 
+html { 
+  font-size: calc(1em + 1vw);
+ }
+
 
 .main {
   position: absolute;
@@ -16,21 +20,15 @@ body {
   height: 80vh;
   top: 10%;
   left: 25%;
-  /* border-radius: 5% 5% 0% 0%; */
-  /* border-radius: 40px 40px 0px 0px; */
-  /* border-radius: 15px 50px; */
-
-  /* box-shadow: 15px 10px white; */
-  box-shadow: 50px 50px 50px rgb(94 170 230);
-  /* box-shadow: 50px 50px 50px #00a3da;  */
-  /* rgb(94 170 230); */
-  /* #00a3da; */
+  box-shadow: 50px 50px 50px #7c7b71;
+  /* overflow: hidden; */
+  /* overflow: scroll; */
 }
 
 h2 {
   text-align: center;
   color: #587eb7;
-  font-size: 2vw;
+  font-size: 3vw;
 }
 
 .time-container {
@@ -39,7 +37,7 @@ h2 {
 }
 
 .error {
-  font-size: 12px;
+  font-size: 1.5vw;
   color: red;
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
@@ -77,22 +75,13 @@ h2 {
 .todo-item-container {
   position: relative;
   display: flex;
-  /* align-items: baseline; */
-  /* text-align: center; */
-  /* align-content: center; */
-  /* align-items: center; */
-  /* justify-items: center; */
   height: auto;
   overflow: scroll;
   width: auto;
-  /* height: auto; */
   border-style: solid;
   border-width: 4px;
   border-color: white;
   align-items: center; /* centers delete icon, checkbox and texts vertically */
-  /* flex-wrap: nowrap; */
-  /* white-space:; */
-  /* margin-right: 1rem; */
 }
 
 
@@ -106,74 +95,35 @@ ul {
   background-color: paleturquoise;
 }
 
-ul li {
-  /* position: relative; */
-  /* height: auto; */
-}
-
-ul li .todo-item {
-  /* position: relative; */
-  /* height: auto; */
-  /* margin-right: 1rem; */
-}
-
-
 .todo-item {
   position: relative;
-  /* height: auto; */
   text-decoration: none;
   color: black;
   opacity: 1;
   cursor: move; 
-  /* justify-content: center; */
-  /* align-items: center; */
-  /* align-content: center; */
   margin-right: 1rem;
   width: 100%;
   margin-left: .4rem;
-
-  /* border: solid red; */
-  /* height: auto; */
-  /* border: solid 2px  white; */
   border-left: 5px solid white;
   border-right: 5px solid white;
 }
-
-.checkbox-container {
-  /* margin-left: .3rem; */
-  /* padding-right: .5rem; */
-  /* border: solid red; */
-  /* text-overflow: ellipsis; */
-}
-
 
 .completed {
   position: relative;
   color: rgb(109, 106, 106);
   opacity: 0.5;
   background-color: rgb(152, 184, 231);
-  /* width: 100%; */
-}
-
-.todo-checkbox {
-  /* vertical-align: -webkit-baseline-middle; */
-  /* vertical-align: middle; */
-  /* height: auto; */
 }
 
 /* Checkbox texts move when margin is adjusted in here */
 .checkbox-container {
   position: relative;
-  /* float: right; */
   cursor: pointer;
-  font-size: 1vw;
+  font-size: 1.5vw;
   overflow: hidden;
   overflow: scroll;
   width: 100%;
   height: auto;  
-  /* margin-left: 5px; */
-
-    /* border: solid red; */
 }
 
 
@@ -181,37 +131,16 @@ ul li .todo-item {
   position: relative;
   float: left;
   align-items: center;
-  /* text-align: center; */
-  /* align-items: center; */
   margin-left: 5px;
-  /* height: auto */
-  /* width: 3%; */
+  max-width: 2vw;
   height: auto;
-
-  /* border: solid red; */
 }
 
 a .delete-icon {
   /* == Note: When width prop is added here, the icon shrinks when multiple lines todo is entered == */
   position: relative;
-  /* align-items: center; */
-  /* align-items: center; */
-  /* margin-top: .5rem; */
-  /* width: 80%; */
-  /* max-width: 100%; */
-  /* height: auto; */
   z-index: 2;
   cursor: pointer;
+  max-width: 100%;
 }
 
-/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 1024px) {
-  h2 {
-    font-size: 2.5vw;
-  }
-
-  .checkbox-container {
-    /* font-size: 2vw;
-    margin-left: 5px; */
-  }
-}
