--- a/todo-app/src/App.css
+++ b/todo-app/src/App.css
@@ -59,6 +59,7 @@ h2 {
   text-align: left;
   background-color: aliceblue;
   font-family: cursive;
+  font-size: 1.5vw;
 }
 
 .todo-container {
@@ -67,7 +68,7 @@ h2 {
   overflow: scroll;
   width: 100%;
   /* The height align with the height in '.main' above */
-  max-height: 64vh;  
+  max-height: 60vh;  
   overflow: hidden;
   overflow-y: auto; /* This is the one needed for the scrollbar to work within this container */
 }
